# pegy-eps-growth-evaluation

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
examples/: universe_sample.txt
scripts/: fetch_sp500_universe_wikipedia.py
src/pegy_research/: __init__.py  build_dataset.py  config.py  data_loader.py  diagnostics.py  evaluate.py  feature_engineering.py  main.py  run_pipeline.py  schema.py  train_models.py
src/pegy_research/backtest/: __init__.py  engine.py
src/pegy_research/data/: __init__.py  alpha_vantage.py  cache.py  fmp.py  rate_limit.py  sec_edgar.py  twelve_data.py  universe.py  yahoo_finance.py
src/pegy_research/evaluation/: __init__.py  forecast_accuracy.py  signal_quality.py
src/pegy_research/features/: __init__.py  pegy.py
