[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pegy-research"
version = "0.1.0"
description = "PEGY EPS growth source evaluation research pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "requests>=2.31.0",
  "python-dotenv>=1.0.0",
  "matplotlib>=3.7.0",
  "yfinance>=1.3.0",
]

[project.scripts]
pegy-run = "pegy_research.run_pipeline:main"

[tool.setuptools.packages.find]
where = ["src"]
