[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pegy-research"
version = "0.2.0"
description = "When Does PEG Fail? — Predicting reliability of low-PEG signals"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "matplotlib>=3.7.0",
  "yfinance>=1.3.0",
  "scikit-learn>=1.3.0",
  "pyarrow>=14.0.0",
  "lxml>=5.0.0",
]

[project.scripts]
peg-research = "pegy_research.main:main"

[tool.setuptools.packages.find]
where = ["src"]
